third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_pack_mname_non_addr.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/invalid_pack_mname_non_addr.move:4:14
  │
4 │         false::M::S { }
  │              ^^
  │              │
  │              Unexpected '::'
  │              Expected ';'
